Fixed layout issues. Fixed the logic to take into account distances are in meters.

--- a/css/index.css
+++ b/css/index.css
@@ -10,17 +10,13 @@
     top: 0;
 }
 
-.ui-title {
-	width: 100%;
-}
-
 h3 {
 	text-align: center;
-	color: grey;
+	color: black;
 	font-family: 'san-serif';    
 }
 
-.heading_text {
+.header_text {
 	text-align: center;
 }
 
